fix header z-index issue

--- a/themes/nab-amplify/assets/css/custom.css
+++ b/themes/nab-amplify/assets/css/custom.css
@@ -1733,4 +1733,4 @@ body .is_friend .remove::before{font-size:22px}
 .message-leggal-notice{font-size:13px;color:#dedede;font-style:italic;margin-top:10px!important}
 
 /* fixed issues after code changes from c. */
-.header .header__navwrapper{z-index:10px;}
+.header .header__navwrapper{z-index:10;}
